--- a/aboutme/wwr/styles/style.css
+++ b/aboutme/wwr/styles/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Serif:wght@700&display=swap');
+
+
 div.content{
     max-width: 1600px;
     margin: 0 auto;
@@ -7,6 +10,9 @@ div.background {
 }
 body {
     background-color: #d3d3d3;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 header {
     background-color: #01172F;
@@ -15,6 +21,7 @@ nav a {
     background-color: azure;
     color: black;
     text-decoration: none;
+    padding: 35px;
 }
 nav a:hover {
     background-color: red;
@@ -24,11 +31,19 @@ nav a:hover {
     background-color: #d3d3d3;
     color: black;
     text-decoration: none;
+    font-size: 2em;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .join {
     background-color: azure;
     color: black;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover {
     background-color: red;
@@ -43,21 +58,28 @@ nav a:hover {
 }
 .msg {
     background-color: azure;
+    line-height: 1.5em;
+    padding:35px;
 }
 .msg h2 {
 color: black;
+font-family:Open Sans, Helvetica, sans-serif;
 }
 .msg p {
     color: black;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 footer {
     background-color: azure;
     color: black;
-    text-decoration: underline;
+    text-decoration: none;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer h3 {
     color: black;
-    text-decoration: underline;
+    text-decoration: none;
 }
 footer a {
     color: black;
@@ -65,10 +87,13 @@ footer a {
 }
 footer a:hover {
     color:red;
-    text-decoration: underline;
+    text-decoration: none;
 }
 .home-title {
     color:black;
+    font-family:"PT Serif",san-sarif, Helvetica;
+    font-size: 2em;
+    margin-top: 10px;
 }
 h4 {
     color: black;
@@ -81,4 +106,31 @@ h4 {
 }
 #hero-img {
     width: 100%;
+}
+h2 {
+    margin:0;
+}
+#logo_link{
+    padding-top: 5px;
+}
+.icon {
+    padding-top: 10px;
+}
+footer .social img{
+    padding-top: 15px;
+}
+.river-card{
+    margin: 200px 0;
+}
+.camping-card{
+    margin: 200px 0;
+}
+.rapids-card{
+    margin: 200px 0;
+}
+.card-img {
+    border: 10px solid black;
+}
+main section img {
+    box-sizing: border-box;
 }
