--- a/aboutme/wwr/styles/style.css
+++ b/aboutme/wwr/styles/style.css
@@ -16,12 +16,19 @@ body {
 }
 header {
     background-color: #01172F;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+
 }
 nav a {
-    background-color: azure;
-    color: black;
+    background-color: #01172F;
+    color: white;
     text-decoration: none;
-    padding: 35px;
+    
 }
 nav a:hover {
     background-color: red;
@@ -55,6 +62,8 @@ nav a:hover {
 }
 #background {
     background-color: #d3d3d3;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 .msg {
     background-color: azure;
@@ -69,6 +78,9 @@ font-family:Open Sans, Helvetica, sans-serif;
     color: black;
     font-size: .8em;
     padding-bottom: 15px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 footer {
     background-color: azure;
@@ -76,6 +88,9 @@ footer {
     text-decoration: none;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer h3 {
     color: black;
@@ -90,7 +105,7 @@ footer a:hover {
     text-decoration: none;
 }
 .home-title {
-    color:black;
+    color: white;
     font-family:"PT Serif",san-sarif, Helvetica;
     font-size: 2em;
     margin-top: 10px;
@@ -107,11 +122,33 @@ h4 {
 #hero-img {
     width: 100%;
 }
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+
+}
+#hero-msg h4 {
+    color: white;
+}
 h2 {
     margin:0;
 }
 #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 .icon {
     padding-top: 10px;
@@ -121,16 +158,92 @@ footer .social img{
 }
 .river-card{
     margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
 }
 .camping-card{
     margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+
 }
 .rapids-card{
     margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
+
 }
 .card-img {
     border: 10px solid black;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.card-img, .mountains {
+    width: 100%;
 }
 main section img {
     box-sizing: border-box;
 }
+#home-grid {
+    display: grid;
+    grid-template-columns: 10fr;
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+
+/* Dont add anything below this  */
+
+
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+            
