contact us page done!

--- a/aboutme/wwr/styles/style.css
+++ b/aboutme/wwr/styles/style.css
@@ -213,6 +213,107 @@ main section img {
     box-shadow: 5px 5px 10px #6f7364;
 }
 
+/* Start Of New CSS Page FOr COntact Us PAge */
+
+.introP {
+    width: 80%;
+    margin: 50px auto;
+}
+.contact-box {
+    background: #fff ;
+    display: flex;
+}
+.contact-left {
+    flex-basis: 60%;
+    padding: 40px 60px;
+    text-align: center;
+}
+.contact-right {
+    flex-basis: 60%;
+    padding: 40px 60px;
+    background: #78c5d7;
+    color: #fff;
+    text-align: center;
+}
+.contact-title {
+    color: black;
+   margin-bottom: 30px;
+   text-align: center;
+   text-decoration: underline;
+}
+ p , .contact-para {
+    color: black;
+    font-size: 20px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.input-row {
+    display:flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+ .input-row .input-group {
+     flex-basis: 45%;
+}
+input {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    outline: none;
+    padding-bottom: 5px ;
+}
+ textarea {
+     width: 100%;
+     border: 1px solid #ccc;
+     outline: none;
+     padding: 10px;
+     box-sizing: border-box;
+ }
+label {
+    margin-bottom: 6px;
+    display: block;
+    color: #78c5d7;
+    text-decoration: underline;
+}
+button {
+    background: #78c5d7;
+    width: 120px;
+    border: none;
+    outline: none;
+    color: #fff;
+    height: 35px;
+    border-radius: 30px;
+    margin-top: 20px;
+    box-shadow: 0px 5px 15px 0px rgba(120,197,215,255);
+}
+.contact-left h3 {
+    color: #78c5d7;
+    font-weight: 600px;
+    margin-bottom: 30px;
+    text-decoration: underline;
+}
+.contact-right h3 {
+   
+    font-weight: 600px;
+    margin-bottom: 30px;
+    text-decoration: underline;
+}
+tr td:first-child{
+    padding-right: 20px;
+    text-decoration: underline;
+    
+}
+tr td {
+    padding-top: 20px ;
+    
+}
+
+
+
+
+
+
 
 /* Dont add anything below this  */
 
