--- a/aboutme/wwr/styles/style.css
+++ b/aboutme/wwr/styles/style.css
@@ -216,12 +216,17 @@ main section img {
 /* Start Of New CSS Page FOr COntact Us PAge */
 
 .introP {
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
     width: 80%;
     margin: 50px auto;
 }
 .contact-box {
     background: #fff ;
     display: flex;
+    grid-column:1/4 ;
+    grid-row: 2/3;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .contact-left {
     flex-basis: 60%;
@@ -238,15 +243,20 @@ main section img {
 .contact-title {
     color: black;
    margin-bottom: 30px;
-   text-align: center;
    text-decoration: underline;
+  grid-column: 1/3;
+  grid-row: 1;
+   margin-top: 30px;
 }
  p , .contact-para {
     color: black;
-    font-size: 20px;
+    font-size: 25px;
     margin-bottom: 30px;
-    text-align: center;
-}
+    line-height: 40px;
+    grid-column: 1/3;
+  grid-row: 1;
+  margin-top: 120px;
+ }
 
 .input-row {
     display:flex;
@@ -307,6 +317,22 @@ tr td:first-child{
 tr td {
     padding-top: 20px ;
     
+}
+.pic-for-asss {
+    width: 90%;
+    border: 10px solid black;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+    margin: 20px;
+    grid-column: -2/-1;
+    grid-row: 1/2;
+    
+}
+.pic-for-asss:hover {
+
+    opacity: .6;
+    transform: scale(1.1)
+
 }
 
 
