--- a/personalsite/styles/index.css
+++ b/personalsite/styles/index.css
@@ -2,7 +2,7 @@ body {
     background: #F2F2F2;
     margin: 0;
    
-    height: 2000px;
+    height: 1000px;
 }
 
 .menu {
@@ -78,6 +78,7 @@ footer {
     justify-content: space-around;
     align-items: center;
     text-transform: uppercase;
+    font-family: sans-serif;
 }
 footer h3 {
     color: black;
@@ -119,6 +120,7 @@ input[type=mail]{
     font-family: sans-serif;
     background: #fff;
     width: 500px;
+    
 }
 .sign-up{
     text-align: center;
@@ -136,50 +138,5 @@ input[type=mail]{
 
 
 
-/* Dont add anything below this  */
 
-
-
-
-@media screen and (max-width: 900px) {
-    #hero, .home-grid {
-        display: block;
-        height: auto;
-    }
-    nav, footer {
-        flex-direction: column;
-    }
-    nav a {
-        display: block;
-        padding: 15px;
-    }
-    #hero {
-        margin-top: 0;
-    }
-    #hero-msg {
-        margin-top: 0;
-    }
-    #hero-msg h4 {
-        display: none;
-    }
-    .home-title {
-        font-size: 25px;
-        color: #6f7364;
-    }
-    .rivers-card, .camping-card, .rapids-card { 
-        margin: 50px auto;
-        width: 60%;
-    }
-    #background {
-        display: none;
-    }
-    .mountains, .msg {
-        width: 80%;
-        display: block;
-        margin: 0 auto;
-    }
-    footer {
-        margin-top: 25px;
-    }
-}
             
