--- a/personalsite/styles/index.css
+++ b/personalsite/styles/index.css
@@ -136,7 +136,129 @@ input[type=mail]{
 }
 
 
+/* Start Of New CSS Page FOr COntact Us PAge */
 
+.introP {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+     width: 80%;
+     margin: 50px auto;
+ }
+ .contact-box {
+     background: #fff ;
+     display: flex;
+     grid-column:1/4 ;
+     grid-row: 2/3;
+     box-shadow: 5px 5px 10px #6f7364;
+ }
+ .contact-left {
+     flex-basis: 60%;
+     padding: 40px 60px;
+     text-align: center;
+ }
+ .contact-right {
+     flex-basis: 60%;
+     padding: 40px 60px;
+     background: #6f1e20;
+     color: #fff;
+     text-align: center;
+ }
+ .contact-title {
+     color: black;
+    margin-bottom: 30px;
+    text-decoration: none;
+    text-align: center;
+   grid-column: 1/3;
+   grid-row: 1;
+    margin-top: 30px;
+ }
+  p , .contact-para {
+     color: black;
+     font-size: 25px;
+     margin-bottom: 30px;
+     line-height: 40px;
+     grid-column: 1/3;
+   grid-row: 1;
+   margin-top: 120px;
+   text-align: center;
+  }
+ 
+ .input-row {
+     display:flex;
+     justify-content: space-between;
+     margin-bottom: 20px;
+ }
+  .input-row .input-group {
+      flex-basis: 45%;
+ }
+ input {
+     width: 100%;
+     border: none;
+     border-bottom: 1px solid #ccc;
+     outline: none;
+     padding-bottom: 5px ;
+ }
+  textarea {
+      width: 100%;
+      border: 1px solid #ccc;
+      outline: none;
+      padding: 10px;
+      box-sizing: border-box;
+  }
+ label {
+     margin-bottom: 6px;
+     display: block;
+     color: #6f1e20;
+     text-decoration: underline;
+ }
+ .butt-1 {
+     background: #6f1e20;
+     width: 120px;
+     border: none;
+     outline: none;
+     color: #fff;
+     height: 35px;
+     border-radius: 30px;
+     margin-top: 20px;
+     box-shadow: 0px 5px 15px 0px rgba(111,30,32);
+ }
+ .contact-left h3 {
+     color: #6f1e20;
+     font-weight: 600px;
+     margin-bottom: 30px;
+     text-decoration: underline;
+ }
+ .contact-right h3 {
+    
+     font-weight: 600px;
+     margin-bottom: 30px;
+     text-decoration: underline;
+ }
+ tr td:first-child{
+     padding-right: 20px;
+     text-decoration: underline;
+     
+ }
+ tr td {
+     padding-top: 20px ;
+     
+ }
+ .pic-for-asss {
+     width: 90%;
+     border: 5px solid black;
+     transition: transform .5s;
+     box-shadow: 5px 5px 10px #6f7364;
+     margin: 20px;
+     grid-column: -2/-1;
+     grid-row: 1/2;
+     
+ }
+ .pic-for-asss:hover {
+ 
+     opacity: .6;
+     transform: scale(1.1)
+ 
+ }
 
 
             
