--- a/personalsite/styles/index.css
+++ b/personalsite/styles/index.css
@@ -1,85 +1,63 @@
 body {
     background: #F2F2F2;
     margin: 0;
-   
+    padding: 0;
+    font-size: 20px;
     height: 1000px;
 }
 
-.menu {
-    width: 100%;
-    height: 120px;
+.header {
     background: #fff;
-    overflow: auto;
-   
+    font-weight: 600;
+    box-shadow: 5px 5px 10px #6f7364;
     
+
 }
-.menu ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    line-height: 60px;
+
+ul{
+    list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
-.menu li {
-float: left;
+li {
+    float: left;
 }
-.menu ul li a{
-    background-color: #fff;
-    text-decoration: none;
-    width: 130px;
+li a {
     display: block;
-    text-align: center;
     color: black;
-    font-size: 18px;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration:none;
+    text-transform: uppercase;
     font-family: sans-serif;
-    letter-spacing: 0.5px;
-}
-.menu li a:hover {
-    color: #396E94;
-    opacity: 0.5;
-    font-size: 19px;
+    
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #F2F2F2;
+  }
 
 
-}
-.search-form {
-    margin-top:15px;
-    float: right;
-    margin-right: 100px;
-}
-input[type=text]{
-    padding: 7px;
-    border: none;
-    font-size: 16px;
-    font-family: sans-serif;
-    background: #F2F2F2;
-}
-.search-top{
-    float: right;
-    background-color:#396E94 ;
-    color: #F2F2F2;
-    border-radius:0px 5px 5px 0;
-    cursor: pointer;
-    position: relative;
-    padding: 7px;
-    font-family: sans-serif;
-    border: none;
-    font-size: 16px;
 
-}
-.logo {
-    float:left;
-}
+
+
 footer {
     background-color: #fff;
     color: black;
     text-decoration: none;
     padding: 50px 75px;
-    margin-top: 200px;
+    margin-top: 50px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     text-transform: uppercase;
     font-family: sans-serif;
+    box-shadow: 5px 5px 10px #6f7364;
+
 }
+
 footer h3 {
     color: black;
     text-decoration: none;
@@ -99,7 +77,7 @@ footer a:hover {
     background: #F2F2F2;
     text-align: center;
     margin:0;
-    padding: 20px;
+    padding: 30px;
 }
 .enter-email {
     float: center;
