--- a/personalsite/styles/index.css
+++ b/personalsite/styles/index.css
@@ -12,7 +12,6 @@ body {
     font-weight: 600;
     box-shadow: 5px 5px 10px #6f7364;
     
-
 }
 
 ul{
@@ -41,11 +40,29 @@ li a {
     background-color: #F2F2F2;
   }
   
+.home-nav {
+    margin-top: 40px;
+    padding-right: 50px;
+    padding-left: 50px;
+}
+.contact-nav {
+  margin-top: 40px;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+.blog-nav {
+    margin-top: 40px;
+    padding-right: 50px;
+    padding-left: 50px;
+}
+
+
 .email-look {
+    float: right;
     background: #fff;
     text-align: center;
     margin:0;
-    padding: 30px;
+    padding-top: 40px;
 }
 .enter-words {
     float: center;
@@ -346,12 +363,16 @@ input[type=mail]{
   /* Caption text */
   .text {
     color: #f2f2f2;
-    font-size: 15px;
+    font-size: 25px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
     width: 100%;
     text-align: center;
+    margin-bottom: 15px;
+    margin-right: 10px;
   }
   
   /* Number text (1/3 etc) */
@@ -394,4 +415,104 @@ input[type=mail]{
 
 
 
+
+
+
+
+
+
+  /* home page image  */
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container-home {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  border: 5px solid black;
+   box-shadow: 5px 5px 10px #6f7364;
+}
+
+/* Hide the images by default */
+.mySlides-home {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev-h, .next-h {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next-h {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev-h:hover, .next-5:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+ .text-h {
+  color: #f2f2f2;
+  font-size: 25px;
+  -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: white;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 15px;
+  margin-right: 10px;
+}
+
+/* Number text (1/3 etc) */
+.numbertext-home {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot-h {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot-5:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
   
