--- a/personalsite/styles/index.css
+++ b/personalsite/styles/index.css
@@ -40,22 +40,52 @@ li a {
     background-color: #F2F2F2;
   }
   
+
+
+
+
+
+.btn {
+  border: 2px solid black;
+  background-color: white;
+  color: black;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
 .home-nav {
     margin-top: 40px;
     padding-right: 50px;
     padding-left: 50px;
+    border-color: #fff;
+  color: black;
+}
+.home-nav:hover {
+  background: #e7e7e7;
 }
 .contact-nav {
   margin-top: 40px;
   padding-right: 50px;
   padding-left: 50px;
+  border-color: #fff;
+  color: black;
 }
+.contact-nav:hover {
+background: #e7e7e7;
+}
+
 .blog-nav {
     margin-top: 40px;
     padding-right: 50px;
     padding-left: 50px;
+    border-color: #fff;
+  color: black;
 }
-
+.blog-nav:hover {
+  background: #e7e7e7;
+}
 
 .email-look {
     float: right;
@@ -517,4 +547,23 @@ input[type=mail]{
 }
   
 
-/* Art Blog PAge  */
+.click-1 {
+  margin: auto;
+  text-align: left;
+}
+.click-2 {
+  margin: auto;
+  text-align: left;
+}
+.card1 {
+ 
+  margin: auto;
+  border: 5px solid red;
+   box-shadow: 2px 2px 5px black;
+}
+.card2 {
+ 
+  margin: auto;
+  border: 5px solid black;
+   box-shadow: 2px 2px 5px black;
+}
