working on home page more

--- a/personalsite/styles/index.css
+++ b/personalsite/styles/index.css
@@ -545,25 +545,41 @@ input[type=mail]{
   from {opacity: .4} 
   to {opacity: 1}
 }
-  
+
+
+.container-5{
+  margin: auto;
+  text-align: center;
+}
+
+
+.container-6 {
+  margin: auto;
+  text-align: center;
+}
+
 
 .click-1 {
   margin: auto;
-  text-align: left;
+  text-align: center;
 }
 .click-2 {
   margin: auto;
-  text-align: left;
+  text-align: center;
 }
 .card1 {
- 
-  margin: auto;
-  border: 5px solid red;
+background-color: #F2F2F2;
+  margin: 10px;
+  border: 5px solid black;
    box-shadow: 2px 2px 5px black;
 }
 .card2 {
- 
-  margin: auto;
+ background-color: #F2F2F2;
+  margin:  10px;
+  padding-top: 10px;
   border: 5px solid black;
    box-shadow: 2px 2px 5px black;
+}
+.container-6 {
+
 }
